fix menu overlap on signin page

--- a/scss/partials/_classes.scss
+++ b/scss/partials/_classes.scss
@@ -1657,10 +1657,10 @@ Headers:		'Varela Round', sans-serif;
   content: "";
   position: absolute;
 }
-.page.sub-page .page-title {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
+// .page.sub-page .page-title {
+//   padding-top: 1rem;
+//   padding-bottom: 1rem;
+// }
 .page.sub-page .form.hero-form {
   padding-top: 2rem;
 }
